--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -72,6 +72,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formadministrador.resx">
+      <DependentUpon>Formadministrador.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formusuario.resx">
       <DependentUpon>Formusuario.cs</DependentUpon>
     </EmbeddedResource>
