--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Fusuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registro_de_productos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Registro_de_productos.Designer.cs">
+      <DependentUpon>Registro_de_productos.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
