--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComunDB.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Dusuario.cs" />
     <Compile Include="Form1.cs">
